--- a/ARL/ARL.cabal
+++ b/ARL/ARL.cabal
@@ -7,8 +7,8 @@ cabal-version: 1.12
 name:           ARL
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/ARL#readme>
-homepage:       https://github.com/githubuser/ARL#readme
-bug-reports:    https://github.com/githubuser/ARL/issues
+homepage:       https://github.com/Spatenheinz/ARL#readme
+bug-reports:    https://github.com/Spatenheinz/ARL/issues
 author:         Author name here
 maintainer:     example@example.com
 copyright:      2020 Author name here
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/ARL
+  location: https://github.com/Spatenheinz/ARL
 
 library
   exposed-modules:
@@ -35,6 +35,9 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , hspec >=2.7.4 && <3
+    , hspec-megaparsec >=2.1.0 && <3
+    , megaparsec >=8.0.0
     , parsec >=3.1.11 && <4
     , pretty >=1.1.3.6 && <2
   default-language: Haskell2010
@@ -49,6 +52,9 @@ executable ARL-exe
   build-depends:
       ARL
     , base >=4.7 && <5
+    , hspec >=2.7.4 && <3
+    , hspec-megaparsec >=2.1.0 && <3
+    , megaparsec >=8.0.0
     , parsec >=3.1.11 && <4
     , pretty >=1.1.3.6 && <2
   default-language: Haskell2010
@@ -64,6 +70,9 @@ test-suite ARL-test
   build-depends:
       ARL
     , base >=4.7 && <5
+    , hspec >=2.7.4 && <3
+    , hspec-megaparsec >=2.1.0 && <3
+    , megaparsec >=8.0.0
     , parsec >=3.1.11 && <4
     , pretty >=1.1.3.6 && <2
   default-language: Haskell2010
