--- a/ARL/package.yaml
+++ b/ARL/package.yaml
@@ -1,6 +1,6 @@
 name:                ARL
 version:             0.1.0.0
-github:              "githubuser/ARL"
+github:              "Spatenheinz/ARL"
 license:             BSD3
 author:              "Author name here"
 maintainer:          "example@example.com"
@@ -21,8 +21,11 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- megaparsec >= 8.0.0
 - parsec >= 3.1.11 && <4
 - pretty >= 1.1.3.6 && <2
+- hspec >= 2.7.4 && <3
+- hspec-megaparsec >= 2.1.0 && <3
 library:
   source-dirs: src
 
