--- a/ARL/package.yaml
+++ b/ARL/package.yaml
@@ -34,7 +34,7 @@ library:
 executables:
   ARL-exe:
     main:                Main.hs
-    source-dirs:         app
+    source-dirs:         src
     ghc-options:
     - -threaded
     - -rtsopts
