--- a/ARL/package.yaml
+++ b/ARL/package.yaml
@@ -23,9 +23,10 @@ dependencies:
 - base >= 4.7 && < 5
 - containers >= 0.6.2.1 && < 1
 - megaparsec >= 8.0.0
-- parsec >= 3.1.11 && <4
-- mtl >= 2.2.2 && < 3
-- pretty >= 1.1.3.6 && <2
+# - parsec >= 3.1.11 && <4
+- parser-combinators >= 1.2.1 && <2
+# - mtl >= 2.2.2 && < 3
+# - pretty >= 1.1.3.6 && <2
 - hspec >= 2.7.4 && <3
 - hspec-megaparsec >= 2.1.0 && <3
 library:
