--- a/ARL/ARL.cabal
+++ b/ARL/ARL.cabal
@@ -31,6 +31,8 @@ library
       Arl.Parser
       Arl.PPrinter
       Arl.RIL
+      Arl.RilState
+      Arl.Utils
       Main
   other-modules:
       Paths_ARL
@@ -42,11 +44,12 @@ library
     , hspec >=2.7.4 && <3
     , hspec-megaparsec >=2.1.0 && <3
     , megaparsec >=8.0.0
+    , mtl >=2.2.2 && <3
     , parser-combinators >=1.2.1 && <2
   default-language: Haskell2010
 
 executable ARL-exe
-  main-is: Main.hs
+  main-is: src/Main.hs
   other-modules:
       Arl.Ast
       Arl.Error
@@ -54,10 +57,14 @@ executable ARL-exe
       Arl.Parser
       Arl.PPrinter
       Arl.RIL
+      Arl.RilState
+      Arl.Utils
+      Main
       Paths_ARL
   hs-source-dirs:
       src
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  default-extensions: NamedFieldPuns
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -XNamedFieldPuns
   build-depends:
       ARL
     , base >=4.7 && <5
@@ -65,6 +72,7 @@ executable ARL-exe
     , hspec >=2.7.4 && <3
     , hspec-megaparsec >=2.1.0 && <3
     , megaparsec >=8.0.0
+    , mtl >=2.2.2 && <3
     , parser-combinators >=1.2.1 && <2
   default-language: Haskell2010
 
@@ -83,5 +91,6 @@ test-suite ARL-test
     , hspec >=2.7.4 && <3
     , hspec-megaparsec >=2.1.0 && <3
     , megaparsec >=8.0.0
+    , mtl >=2.2.2 && <3
     , parser-combinators >=1.2.1 && <2
   default-language: Haskell2010
