--- a/ARL/package.yaml
+++ b/ARL/package.yaml
@@ -23,10 +23,8 @@ dependencies:
 - base >= 4.7 && < 5
 - containers >= 0.6.2.1 && < 1
 - megaparsec >= 8.0.0
-# - parsec >= 3.1.11 && <4
 - parser-combinators >= 1.2.1 && <2
-# - mtl >= 2.2.2 && < 3
-# - pretty >= 1.1.3.6 && <2
+- mtl >= 2.2.2 && < 3
 - hspec >= 2.7.4 && <3
 - hspec-megaparsec >= 2.1.0 && <3
 library:
@@ -34,12 +32,15 @@ library:
 
 executables:
   ARL-exe:
-    main:                Main.hs
+    main:                src/Main.hs
     source-dirs:         src
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -XNamedFieldPuns
+    default-extensions:
+    - NamedFieldPuns
     dependencies:
     - ARL
 
