--- a/ARL/ARL.cabal
+++ b/ARL/ARL.cabal
@@ -49,7 +49,7 @@ library
   default-language: Haskell2010
 
 executable ARL-exe
-  main-is: src/Main.hs
+  main-is: Main.hs
   other-modules:
       Arl.Ast
       Arl.Error
@@ -59,12 +59,11 @@ executable ARL-exe
       Arl.RIL
       Arl.RilState
       Arl.Utils
-      Main
       Paths_ARL
   hs-source-dirs:
       src
   default-extensions: NamedFieldPuns
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N -XNamedFieldPuns
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       ARL
     , base >=4.7 && <5
