--- a/ARL/package.yaml
+++ b/ARL/package.yaml
@@ -32,13 +32,12 @@ library:
 
 executables:
   ARL-exe:
-    main:                src/Main.hs
+    main:                Main.hs
     source-dirs:         src
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    - -XNamedFieldPuns
     default-extensions:
     - NamedFieldPuns
     dependencies:
